--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             </div>
         </div>
 
-        <div class="reset">🔁</div>
+        <div class="reset">
+            <div class="reset-btn">🔁</div>
+        </div>
         <script src='script.js'></script>
     </body>
 </html>
